test/fail/unterminated-string-newline.rnp
'hello
---
SyntaxError: Unterminated string
fail/unterminated-string-newline.rnp:1:7
'hello
      ^
